--- a/packages.bib
+++ b/packages.bib
@@ -15,12 +15,44 @@
   url = {https://github.com/kbroman/broman},
 }
 
+@Manual{R-broom,
+  title = {broom: Convert Statistical Objects into Tidy Tibbles},
+  author = {David Robinson and Alex Hayes and Simon Couch},
+  year = {2022},
+  note = {R package version 1.0.2},
+  url = {https://CRAN.R-project.org/package=broom},
+}
+
 @Manual{R-dplyr,
   title = {dplyr: A Grammar of Data Manipulation},
   author = {Hadley Wickham and Romain François and Lionel Henry and Kirill Müller},
   year = {2022},
   note = {R package version 1.0.10},
   url = {https://CRAN.R-project.org/package=dplyr},
+}
+
+@Manual{R-DT,
+  title = {DT: A Wrapper of the JavaScript Library DataTables},
+  author = {Yihui Xie and Joe Cheng and Xianying Tan},
+  year = {2022},
+  note = {R package version 0.26},
+  url = {https://github.com/rstudio/DT},
+}
+
+@Manual{R-dunn.test,
+  title = {dunn.test: Dunn's Test of Multiple Comparisons Using Rank Sums},
+  author = {Alexis Dinno},
+  year = {2017},
+  note = {R package version 1.3.5},
+  url = {https://CRAN.R-project.org/package=dunn.test},
+}
+
+@Manual{R-elevatr,
+  title = {elevatr: Access Elevation Data from Various APIs},
+  author = {Jeffrey Hollister},
+  year = {2022},
+  note = {R package version 0.4.2},
+  url = {https://github.com/jhollist/elevatr/},
 }
 
 @Manual{R-flextable,
@@ -39,6 +71,15 @@
   url = {https://CRAN.R-project.org/package=ggplot2},
 }
 
+@Manual{R-ggrepel,
+  title = {ggrepel: Automatically Position Non-Overlapping Text Labels with
+ggplot2},
+  author = {Kamil Slowikowski},
+  year = {2022},
+  note = {R package version 0.9.2},
+  url = {https://github.com/slowkow/ggrepel},
+}
+
 @Manual{R-ggspatial,
   title = {ggspatial: Spatial Data Framework for ggplot2},
   author = {Dewey Dunnington},
@@ -47,12 +88,44 @@
   url = {https://CRAN.R-project.org/package=ggspatial},
 }
 
+@Manual{R-ggthemes,
+  title = {ggthemes: Extra Themes, Scales and Geoms for ggplot2},
+  author = {Jeffrey B. Arnold},
+  year = {2021},
+  note = {R package version 4.2.4},
+  url = {https://github.com/jrnold/ggthemes},
+}
+
+@Manual{R-glue,
+  title = {glue: Interpreted String Literals},
+  author = {Jim Hester and Jennifer Bryan},
+  year = {2022},
+  note = {R package version 1.6.2},
+  url = {https://CRAN.R-project.org/package=glue},
+}
+
 @Manual{R-gt,
   title = {gt: Easily Create Presentation-Ready Display Tables},
   author = {Richard Iannone and Joe Cheng and Barret Schloerke and Ellis Hughes and JooYoung Seo},
   year = {2022},
   note = {R package version 0.8.0},
   url = {https://CRAN.R-project.org/package=gt},
+}
+
+@Manual{R-gtExtras,
+  title = {gtExtras: Extending gt for Beautiful HTML Tables},
+  author = {Thomas Mock},
+  year = {2022},
+  note = {R package version 0.4.5},
+  url = {https://CRAN.R-project.org/package=gtExtras},
+}
+
+@Manual{R-hms,
+  title = {hms: Pretty Time of Day},
+  author = {Kirill Müller},
+  year = {2022},
+  note = {R package version 1.1.2},
+  url = {https://CRAN.R-project.org/package=hms},
 }
 
 @Manual{R-kableExtra,
@@ -71,6 +144,15 @@
   url = {https://yihui.org/knitr/},
 }
 
+@Manual{R-leaflet,
+  title = {leaflet: Create Interactive Web Maps with the JavaScript Leaflet
+Library},
+  author = {Joe Cheng and Bhaskar Karambelkar and Yihui Xie},
+  year = {2022},
+  note = {R package version 2.1.1},
+  url = {https://rstudio.github.io/leaflet/},
+}
+
 @Manual{R-lubridate,
   title = {lubridate: Make Dealing with Dates a Little Easier},
   author = {Vitalie Spinu and Garrett Grolemund and Hadley Wickham},
@@ -79,12 +161,60 @@
   url = {https://CRAN.R-project.org/package=lubridate},
 }
 
+@Manual{R-metR,
+  title = {metR: Tools for Easier Analysis of Meteorological Fields},
+  author = {Elio Campitelli},
+  year = {2022},
+  note = {R package version 0.13.0},
+  url = {https://github.com/eliocamp/metR},
+}
+
 @Manual{R-mosaic,
   title = {mosaic: Project MOSAIC Statistics and Mathematics Teaching Utilities},
   author = {Randall Pruim and Daniel T. Kaplan and Nicholas J. Horton},
   year = {2022},
   note = {R package version 1.8.4.2},
   url = {https://CRAN.R-project.org/package=mosaic},
+}
+
+@Manual{R-officedown,
+  title = {officedown: Enhanced R Markdown Format for Word and PowerPoint},
+  author = {David Gohel and Noam Ross},
+  year = {2022},
+  note = {R package version 0.2.4},
+  url = {https://CRAN.R-project.org/package=officedown},
+}
+
+@Manual{R-officer,
+  title = {officer: Manipulation of Microsoft Word and PowerPoint Documents},
+  author = {David Gohel},
+  year = {2022},
+  note = {R package version 0.4.4},
+  url = {https://CRAN.R-project.org/package=officer},
+}
+
+@Manual{R-plotly,
+  title = {plotly: Create Interactive Web Graphics via plotly.js},
+  author = {Carson Sievert and Chris Parmer and Toby Hocking and Scott Chamberlain and Karthik Ram and Marianne Corvellec and Pedro Despouy},
+  year = {2022},
+  note = {R package version 4.10.1},
+  url = {https://CRAN.R-project.org/package=plotly},
+}
+
+@Manual{R-raster,
+  title = {raster: Geographic Data Analysis and Modeling},
+  author = {Robert J. Hijmans},
+  year = {2022},
+  note = {R package version 3.6-11},
+  url = {https://rspatial.org/raster},
+}
+
+@Manual{R-reactable,
+  title = {reactable: Interactive Data Tables for R},
+  author = {Greg Lin},
+  year = {2022},
+  note = {R package version 0.4.1},
+  url = {https://CRAN.R-project.org/package=reactable},
 }
 
 @Manual{R-readr,
@@ -101,6 +231,14 @@
   year = {2022},
   note = {R package version 1.4.1},
   url = {https://CRAN.R-project.org/package=readxl},
+}
+
+@Manual{R-rmarkdown,
+  title = {rmarkdown: Dynamic Documents for R},
+  author = {JJ Allaire and Yihui Xie and Jonathan McPherson and Javier Luraschi and Kevin Ushey and Aron Atkins and Hadley Wickham and Joe Cheng and Winston Chang and Richard Iannone},
+  year = {2022},
+  note = {R package version 2.19},
+  url = {https://CRAN.R-project.org/package=rmarkdown},
 }
 
 @Manual{R-scales,
@@ -136,12 +274,36 @@ Phase},
   url = {https://github.com/datastorm-open/suncalc},
 }
 
+@Manual{R-tanaka,
+  title = {tanaka: Design Shaded Contour Lines (or Tanaka) Maps},
+  author = {Timothée Giraud},
+  year = {2022},
+  note = {R package version 0.3.0},
+  url = {https://github.com/riatelab/tanaka/},
+}
+
+@Manual{R-terra,
+  title = {terra: Spatial Data Analysis},
+  author = {Robert J. Hijmans},
+  year = {2022},
+  note = {R package version 1.6-47},
+  url = {https://rspatial.org/terra/},
+}
+
 @Manual{R-tidyverse,
   title = {tidyverse: Easily Install and Load the Tidyverse},
   author = {Hadley Wickham},
   year = {2022},
   note = {R package version 1.3.2},
   url = {https://CRAN.R-project.org/package=tidyverse},
+}
+
+@Manual{R-vegan,
+  title = {vegan: Community Ecology Package},
+  author = {Jari Oksanen and Gavin L. Simpson and F. Guillaume Blanchet and Roeland Kindt and Pierre Legendre and Peter R. Minchin and R.B. O'Hara and Peter Solymos and M. Henry H. Stevens and Eduard Szoecs and Helene Wagner and Matt Barbour and Michael Bedward and Ben Bolker and Daniel Borcard and Gustavo Carvalho and Michael Chirico and Miquel {De Caceres} and Sebastien Durand and Heloisa Beatriz Antoniazi Evangelista and Rich FitzJohn and Michael Friendly and Brendan Furneaux and Geoffrey Hannigan and Mark O. Hill and Leo Lahti and Dan McGlinn and Marie-Helene Ouellette and Eduardo {Ribeiro Cunha} and Tyler Smith and Adrian Stier and Cajo J.F. {Ter Braak} and James Weedon},
+  year = {2022},
+  note = {R package version 2.6-4},
+  url = {https://github.com/vegandevs/vegan},
 }
 
 @Book{ggplot22016,
@@ -195,6 +357,35 @@ Phase},
   pages = {77--102},
   year = {2017},
   url = {https://journal.r-project.org/archive/2017/RJ-2017-024/index.html},
+}
+
+@Book{plotly2020,
+  author = {Carson Sievert},
+  title = {Interactive Web-Based Data Visualization with R, plotly, and shiny},
+  publisher = {Chapman and Hall/CRC},
+  year = {2020},
+  isbn = {9781138331457},
+  url = {https://plotly-r.com},
+}
+
+@Book{rmarkdown2018,
+  title = {R Markdown: The Definitive Guide},
+  author = {Yihui Xie and J.J. Allaire and Garrett Grolemund},
+  publisher = {Chapman and Hall/CRC},
+  address = {Boca Raton, Florida},
+  year = {2018},
+  note = {ISBN 9781138359338},
+  url = {https://bookdown.org/yihui/rmarkdown},
+}
+
+@Book{rmarkdown2020,
+  title = {R Markdown Cookbook},
+  author = {Yihui Xie and Christophe Dervieux and Emily Riederer},
+  publisher = {Chapman and Hall/CRC},
+  address = {Boca Raton, Florida},
+  year = {2020},
+  note = {ISBN 9780367563837},
+  url = {https://bookdown.org/yihui/rmarkdown-cookbook},
 }
 
 @Article{sf2018,
